# contador_de_carros

./: CAMBIOS_COPYRIGHT.txt  COPYRIGHT.md  INSTRUCCIONES_EJECUTABLE.md  LICENSE  MEJORAS_EMPAQUETADO.txt  NOTICE  README.md  __init__.py  build_exe.py  contador_de_carros.spec  coordinates.py  count_cars.py  eee.py  login.py  main.py  paraprogrma.txt  paravideo.py  pyproject.toml  requirements.txt  sort.py  usuarios.json  verificar_build.py  www.py
recursos/: coords_selected.json  video_selected.json
resultados/: resultados_trafico_20251101_211358_resumen.csv  resultados_trafico_20251101_213523_por_tipo.csv  resultados_trafico_20251101_213523_resumen.csv  resultados_trafico_20251101_214202_resumen.csv  resultados_trafico_20251101_214412_por_carril.csv  resultados_trafico_20251101_214412_resumen.csv  resultados_trafico_20251101_214431_por_tipo.csv  resultados_trafico_20251101_214431_resumen.csv  resultados_trafico_20251101_214442_por_carril.csv  resultados_trafico_20251101_214442_resumen.csv  resultados_trafico_20251101_214443_resumen.csv  resultados_trafico_20251101_214451_resumen.csv  resultados_trafico_20251101_214923_por_tipo.csv  resultados_trafico_20251101_214923_resumen.csv  resultados_trafico_20251101_214926_resumen.csv  resultados_trafico_20251101_214927_resumen.csv  resultados_trafico_20251101_215048_por_carril.csv  resultados_trafico_20251101_215048_por_tipo.csv  resultados_trafico_20251101_215048_resumen.csv  resultados_trafico_20251101_215118_por_carril.csv  resultados_trafico_20251101_215118_por_tipo.csv  resultados_trafico_20251101_215118_resumen.csv  (+4 more)
(+3 files in other folders)
